# AI-Powered-Phishing-Detection-System

./: .env  README.md  emails.csv  main.py  phishing_detection.py  phishing_model.pkl  pyproject.toml
