[project]
name = "ai-powered-phishing-detection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "joblib>=1.5.3",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
]
